# JDim

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  ChangeLog  INSTALL  Makefile.am  README  README.md  autogen.sh  configure.ac  configure.in  jd.desktop  jd.spec  jdim.desktop  jdim.metainfo.xml  jdim.spec  meson.build  meson_options.txt  p1.rej
src/: Makefile.am  aamanager.cpp  aamanager.h  articleitemmenupref.cpp  articleitemmenupref.h  articleitempref.cpp  articleitempref.h  boardcolumnsid.h  boarditemmenupref.cpp  boarditemmenupref.h  boarditempref.cpp  boarditempref.h  browserpref.h  browsers.cpp  browsers.h  buildinfo.h.sh  cache.cpp  cache.h  colorid.h  command.cpp  command.h  command_args.h  compmanager.cpp  compmanager.h  control.cpp  control.h  controlid.h  controllabel.h  controlutil.cpp  controlutil.h  core.cpp  core.h  cssmanager.cpp  cssmanager.h  data_info.h  dispatchmanager.cpp  dispatchmanager.h  dndmanager.cpp  dndmanager.h  environment.cpp  (+84 more)
src/article/: Makefile.am  articleadmin.cpp  articleadmin.h  articleview.cpp  articleview.h  articleviewbase.cpp  articleviewbase.h  articleviewetc.cpp  articleviewetc.h  articleviewinfo.cpp  articleviewinfo.h  articleviewpopup.cpp  articleviewpopup.h  articleviewpreview.cpp  articleviewpreview.h  articleviewsearch.cpp  articleviewsearch.h  caret.h  drawareabase.cpp  drawareabase.h  drawareainfo.cpp  drawareainfo.h  drawareamain.cpp  drawareamain.h  drawareapopup.cpp  drawareapopup.h  embeddedimage.cpp  embeddedimage.h  font.cpp  font.h  layouttree.cpp  layouttree.h  meson.build  preference.cpp  preference.h  scrollinfo.h  toolbar.cpp  toolbar.h  toolbarsearch.cpp  toolbarsearch.h  (+2 more)
src/bbslist/: Makefile.am  addetcdialog.cpp  addetcdialog.h  bbslistadmin.cpp  bbslistadmin.h  bbslistview.cpp  bbslistview.h  bbslistviewbase.cpp  bbslistviewbase.h  columns.cpp  columns.h  editlistwin.cpp  editlistwin.h  etclistview.cpp  etclistview.h  favoriteview.cpp  favoriteview.h  historyview.cpp  historyview.h  meson.build  selectdialog.cpp  selectdialog.h  selectlistview.cpp  selectlistview.h  toolbar.cpp  toolbar.h
src/board/: Makefile.am  boardadmin.cpp  boardadmin.h  boardview.cpp  boardview.h  boardviewbase.cpp  boardviewbase.h  boardviewlog.cpp  boardviewlog.h  boardviewnext.cpp  boardviewnext.h  boardviewsidebar.cpp  boardviewsidebar.h  columns.h  meson.build  preference.cpp  preference.h  toolbar.cpp  toolbar.h
src/config/: Makefile.am  aboutconfig.cpp  aboutconfig.h  aboutconfigdiag.cpp  aboutconfigdiag.h  buttonconfig.cpp  buttonconfig.h  configitems.cpp  configitems.h  defaultconf.h  globalconf.cpp  globalconf.h  keyconfig.cpp  keyconfig.h  meson.build  mouseconfig.cpp  mouseconfig.h  mousekeyconf.cpp  mousekeyconf.h  mousekeyitem.h
src/control/: Makefile.am  buttonconfig.cpp  buttonconfig.h  buttonpref.cpp  buttonpref.h  control.cpp  control.h  controlid.h  controllabel.h  controlutil.cpp  controlutil.h  defaultconf.h  get_config.h  keyconfig.cpp  keyconfig.h  keypref.cpp  keypref.h  keysyms.h  meson.build  mouseconfig.cpp  mouseconfig.h  mousekeyconf.cpp  mousekeyconf.h  mousekeyitem.h  mousekeypref.cpp  mousekeypref.h  mousepref.cpp  mousepref.h
src/dbimg/: Makefile.am  delimgcachediag.cpp  delimgcachediag.h  delimgdiag.h  img.cpp  img.h  imghash.h  imginterface.cpp  imginterface.h  imgroot.cpp  imgroot.h  meson.build
src/dbtree/: Makefile.am  article2ch.cpp  article2ch.h  article2chcompati.cpp  article2chcompati.h  articlebase.cpp  articlebase.h  articlehash.cpp  articlehash.h  articlejbbs.cpp  articlejbbs.h  articlelocal.cpp  articlelocal.h  articlemachi.cpp  articlemachi.h  bbsmenu.cpp  bbsmenu.h  board2ch.cpp  board2ch.h  board2chcompati.cpp  board2chcompati.h  boardbase.cpp  boardbase.h  boardfactory.cpp  boardfactory.h  boardjbbs.cpp  boardjbbs.h  boardlocal.cpp  boardlocal.h  boardmachi.cpp  boardmachi.h  etcboardinfo.h  frontloader.cpp  frontloader.h  interface.cpp  interface.h  meson.build  node.h  nodetree2ch.cpp  nodetree2ch.h  (+21 more)
src/history/: Makefile.am  historymanager.cpp  historymanager.h  historymenu.cpp  historymenu.h  historysubmenu.cpp  historysubmenu.h  meson.build  viewhistory.cpp  viewhistory.h  viewhistoryitem.h
src/icons/: Makefile.am  icon_add16.h  icon_check16.h  icon_down16.h  icon_jd16.h  icon_jd32.h  icon_jd48.h  iconfiles.h  iconid.h  iconmanager.cpp  iconmanager.h  meson.build
src/image/: Makefile.am  imageadmin.cpp  imageadmin.h  imagearea.cpp  imagearea.h  imageareabase.cpp  imageareabase.h  imageareaicon.cpp  imageareaicon.h  imageareapopup.cpp  imageareapopup.h  imageview.cpp  imageview.h  imageviewbase.cpp  imageviewbase.h  imageviewicon.cpp  imageviewicon.h  imageviewpopup.cpp  imageviewpopup.h  imagewin.cpp  imagewin.h  meson.build  preference.cpp  preference.h
src/jdlib/: Makefile.am  confloader.cpp  confloader.h  constptr.h  cookiemanager.cpp  cookiemanager.h  hash_set.cpp  hash_set.h  heap.cpp  heap.h  hkana.h  imgloader.cpp  imgloader.h  jdiconv.cpp  jdiconv.h  jdmigemo.cpp  jdmigemo.h  jdmutex.h  jdregex.cpp  jdregex.h  jdsocket.cpp  jdsocket.h  jdsocketgnutls.h  jdsocketopenssl.h  jdthread.cpp  jdthread.h  loader.cpp  loader.h  loaderdata.cpp  loaderdata.h  meson.build  misccharcode.cpp  misccharcode.h  miscgtk.cpp  miscgtk.h  miscmsg.cpp  miscmsg.h  miscthread.cpp  miscthread.h  misctime.cpp  (+17 more)
src/message/: Makefile.am  aamenu.cpp  aamenu.h  confirmdiag.cpp  confirmdiag.h  logitem.h  logmanager.cpp  logmanager.h  meson.build  messageadmin.cpp  messageadmin.h  messageview.cpp  messageview.h  messageviewbase.cpp  messageviewbase.h  messagewin.cpp  post.cpp  (+4 more)
test/: Makefile.am  Makefile.in  README.md  gtest_dbimg_imgroot.cpp  gtest_dbtree_nodetreebase.cpp  gtest_dbtree_root.cpp  gtest_dbtree_spchar_decoder.cpp  gtest_examples.cpp  gtest_jdlib_cookiemanager.cpp  gtest_jdlib_jdiconv.cpp  gtest_jdlib_jdregex.cpp  gtest_jdlib_loader.cpp  gtest_jdlib_misccharcode.cpp  gtest_jdlib_misctime.cpp  gtest_jdlib_misctrip.cpp  gtest_jdlib_miscutil.cpp  gtest_jdlib_span.cpp  gtest_message_messageviewbase.cpp  gtest_message_post.cpp  gtest_xml_dom.cpp  meson.build
(+253 files in other folders)
